# HAL

./: CMakeLists.txt  LICENSE  README.md
Architectures/: CMakeLists.txt
Architectures/Mocks/Mock_GPIO/: Mock_GPIO.hh
Architectures/Mocks/Mock_SPI/: Mock_SPI.hh
Architectures/RP2040/: CMakeLists.txt
Architectures/RP2040/PR2040_GPIO/: RP2040_GPIOPin.cpp  RP2040_GPIOPin.hh
Architectures/RP2040/RP2040_I2C/: RP2040_I2C.cpp  RP2040_I2C.h
Architectures/RP2040/RP2040_SPI/: RP2040_SPI.cpp  RP2040_SPI.hh
Architectures/RP2040/RP2040_UART/: RP2040_UART.cpp  RP2040_UART.hh
Architectures/RP2040/cmakeScripts/: pico_extras_import_optional.cmake  pico_sdk_import.cmake
Interfaces/: GPIOPinInterface.hh  I2CInterface.hh  SPIInterface.hh  UARTInterface.hh
